--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 </div>
 
                 <div class="background-image large">
-                    <div class="background-wrapper" style="background-image: url('../img/back-big.jpg')"></div>
+                    <div class="background-wrapper" style="background-image: url('https://ffernandluis.github.io/malldomzon/img/back-big.jpg')"></div>
                 </div>
                 <div class="background-image small">
-                    <div class="background-wrapper" style="background-image: url('../img/back-smalll.jpg');"></div>
+                    <div class="background-wrapper" style="background-image: url('https://ffernandluis.github.io/malldomzon/img/back-smalll.jpg');"></div>
                 </div>
 
                 <div class="container-list">
