--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#000000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MallDomzon</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet" >
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/fixed.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="icon" href="img/mall domzon.svg">
     
 </head>
 <body>
