--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
                             <h3>Netflix</h3>
                         </div>
                         <div class="price-price">
-                            <h2>25 Bs</h2>
+                            <h2 class="text-font">25 </h2>
+                            <span>Bs</span>
                         </div>
                         <div class="card-list">
                             <ul>
@@ -179,7 +180,8 @@
                             <h3>Netflix</h3>
                         </div>
                         <div class="price-price">
-                            <h2>25 Bs</h2>
+                            <h2 class="text-font">25 </h2>
+                            <span>Bs</span>
                         </div>
                         <div class="card-list">
                             <ul>
@@ -204,7 +206,8 @@
                             <h3>Netflix</h3>
                         </div>
                         <div class="price-price">
-                            <h2>25 Bs</h2>
+                            <h2 class="text-font">25 </h2>
+                            <span>Bs</span>
                         </div>
                         <div class="card-list">
                             <ul>
